<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="30sp">

    </TextView>

    <TextView
        android:id="@+id/month_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/month_started"
        android:textSize="30sp">

    </TextView>

    <TextView
        android:id="@+id/monthly_charged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/monthly_charged"
        android:textSize="30sp">

    </TextView>


    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/comment"
        android:textSize="30sp">

    </TextView>



</LinearLayout>
